--- a/README.textile
+++ b/README.textile
@@ -1,15 +1,15 @@
-h2. Want to find the Cloud Computing service that best suits your needs? Check out IntelliCloudBench!
+h2. Want to find the Cloud Computing service that best suits your needs? Check out BalloonRace!
 
-h1. What is IntelliCloudBench?
+h1. What is BalloonRace?
 
 h3. Web application
 
-IntelliCloudBench is a Vaadin web application that supports you in benchmarking multiple Cloud Computing service providers at a time.
+BalloonRace is a Vaadin web application that supports you in benchmarking multiple Cloud Computing service providers at a time.
 Currently it supports a subset of the benchmarks that are used by the Phoronix Test Suite and the Cloud Computing services supported by jclouds.
 
 h3. libIntelliCloudBench
 
-The part of IntelliCloudBench that does most of the work is available as a separate library.
+The part of BalloonRace that does most of the work is available as a separate library.
 
 h1. How to use?
 
